--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "backend/app.py",
+            "src": "api/index.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "frontend/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "api/index.py"
+        },
+        {
             "src": "/(.*)",
-            "dest": "backend/app.py"
+            "dest": "frontend/$1"
         }
     ]
 } 
