--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==3.0.2
-pandas==2.2.1
-numpy==1.26.4
-gunicorn==21.2.0
-openpyxl==3.1.2
+Flask==2.0.1
+pandas==1.3.3
+numpy==1.21.2
+openpyxl==3.0.9
+python-dateutil==2.8.2
+Werkzeug==2.0.1
+gunicorn==20.1.0
 Flask-Limiter==3.5.1
 Flask-Talisman==1.1.0
 plotly==5.19.0
-python-dateutil==2.8.2
 xlrd==2.0.1 
