--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python@3.1.30"
+            "use": "@vercel/python@3.1.30",
+            "config": {
+                "runtime": "python3.9"
+            }
         },
         {
             "src": "frontend/**",
@@ -21,6 +24,7 @@
         }
     ],
     "env": {
-        "PYTHONPATH": "."
+        "PYTHONPATH": ".",
+        "PYTHON_VERSION": "3.9"
     }
 } 
