--- a/vercel.json
+++ b/vercel.json
@@ -3,28 +3,13 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python@3.1.30",
-            "config": {
-                "runtime": "python3.9"
-            }
-        },
-        {
-            "src": "frontend/**",
-            "use": "@vercel/static"
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "api/index.py"
-        },
-        {
             "src": "/(.*)",
-            "dest": "frontend/$1"
+            "dest": "api/index.py"
         }
-    ],
-    "env": {
-        "PYTHONPATH": ".",
-        "PYTHON_VERSION": "3.9"
-    }
+    ]
 } 
